--- a/docker/Dockerfile-python3.5-build
+++ b/docker/Dockerfile-python3.5-build
@@ -17,7 +17,13 @@ RUN mkdir src
 ENV PATH="/usr/local/bin:${PATH}"
 ENV LD_LIBRARY_PATH="/usr/local/lib:/usr/local/lib64:${LD_LIBRARY_PATH}"
 
-# Install gcc dependencies
+# Install cmake from binary release
+WORKDIR /opt
+RUN curl -O https://cmake.org/files/v3.10/cmake-3.10.2-Linux-x86_64.tar.gz
+RUN tar xvf cmake-3.10.2-Linux-x86_64.tar.gz
+ENV PATH="/opt/cmake-3.10.2-Linux-x86_64/bin:${PATH}"
+
+# Install gcc dependencies (to bootstrap llvm)
 WORKDIR /src
 RUN curl -O https://gmplib.org/download/gmp/gmp-6.1.2.tar.bz2
 RUN tar xvf gmp-6.1.2.tar.bz2
@@ -51,6 +57,21 @@ RUN ./configure --prefix=/usr/local --with-system-zlib --disable-multilib
 RUN make -j16
 RUN make install
 
+# Set env variables to use gcc
+ENV CC="/usr/local/bin/gcc"
+ENV CXX="/usr/local/bin/g++"
+ENV CMAKE_C_COMPILER="/usr/local/bin/gcc"
+ENV CMAKE_CXX_COMPILER="/usr/local/bin/g++"
+
+# Install Python 2.7 from source (needed by llvm)
+WORKDIR /src
+RUN curl -O https://www.python.org/ftp/python/2.7.13/Python-2.7.13.tgz
+RUN tar xvf Python-2.7.13.tgz
+WORKDIR /src/Python-2.7.13
+RUN ./configure --prefix=/usr/local --enable-unicode=ucs4 --enable-shared --enable-loadable-sqlite-extensions
+RUN make -j16
+RUN make install
+
 # Install Python 3.5 from source
 WORKDIR /src
 RUN curl -O https://www.python.org/ftp/python/3.5.4/Python-3.5.4.tgz
@@ -60,15 +81,45 @@ RUN ./configure --prefix=/usr/local --enable-unicode=ucs4 --enable-shared --enab
 RUN make -j16
 RUN make install
 
-# Install cmake from binary release
-WORKDIR /opt
-RUN curl -O https://cmake.org/files/v3.10/cmake-3.10.2-Linux-x86_64.tar.gz
-RUN tar xvf cmake-3.10.2-Linux-x86_64.tar.gz
-ENV PATH="/opt/cmake-3.10.2-Linux-x86_64/bin:${PATH}"
+# Install llvm from source
+WORKDIR /src
+RUN curl -O http://releases.llvm.org/6.0.0/llvm-6.0.0.src.tar.xz
+RUN tar xvf llvm-6.0.0.src.tar.xz
+WORKDIR /src/llvm-6.0.0.src
+RUN mkdir build
+WORKDIR /src/llvm-6.0.0.src/tools
+RUN curl -O http://releases.llvm.org/6.0.0/cfe-6.0.0.src.tar.xz
+RUN tar xvf cfe-6.0.0.src.tar.xz
+RUN mv cfe-6.0.0.src clang
+WORKDIR /src/llvm-6.0.0.src/projects
+RUN curl -O http://releases.llvm.org/6.0.0/libcxx-6.0.0.src.tar.xz
+RUN tar xvf libcxx-6.0.0.src.tar.xz
+RUN mv libcxx-6.0.0.src libcxx
+RUN curl -O http://releases.llvm.org/6.0.0/libcxxabi-6.0.0.src.tar.xz
+RUN tar xvf libcxxabi-6.0.0.src.tar.xz
+RUN mv libcxxabi-6.0.0.src libcxxabi
+RUN curl -O http://releases.llvm.org/6.0.0/compiler-rt-6.0.0.src.tar.xz
+RUN tar xvf compiler-rt-6.0.0.src.tar.xz
+RUN mv compiler-rt-6.0.0.src compiler-rt
+RUN curl -O http://releases.llvm.org/6.0.0/openmp-6.0.0.src.tar.xz
+RUN tar xvf openmp-6.0.0.src.tar.xz
+RUN mv openmp-6.0.0.src openmp
+RUN curl -O http://releases.llvm.org/6.0.0/lld-6.0.0.src.tar.xz
+RUN tar xvf lld-6.0.0.src.tar.xz
+RUN mv lld-6.0.0.src.tar.xz lld
+RUN curl -O http://releases.llvm.org/6.0.0/libunwind-6.0.0.src.tar.xz
+RUN tar xvf libunwind-6.0.0.src.tar.xz
+RUN mv libunwind-6.0.0.src.tar.xz libunwind
+WORKDIR /src/llvm-6.0.0.src/build
+RUN cmake .. -DCMAKE_BUILD_TYPE=Release -DCLANG_DEFAULT_CXX_STDLIB=libc++ -DCLANG_DEFAULT_RTLIB=compiler-rt -DCLANG_DEFAULT_LINKER=lld -DLIBCXX_HAS_GCC_S_LIB=OFF
+RUN make -j16
+RUN make install
 
-# Set compiler binary paths for CMake to pick up
-ENV CC="/usr/local/bin/gcc"
-ENV CXX="/usr/local/bin/g++"
+# Set build flags to make sure everything else builds with clang, libc++
+ENV CC="/usr/local/bin/clang"
+ENV CXX="/usr/local/bin/clang++"
+ENV CMAKE_C_COMPILER="/usr/local/bin/clang"
+ENV CMAKE_CXX_COMPILER="/usr/local/bin/clang++"
 
 # Install pip and virtualenv
 WORKDIR /src
